--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,18 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 43px;
+  color: #004f54;
+}
+p {
+  font-weight: 400px;
+  font-size: 16px;
+  line-height: 43px;
+  color: #696969;
 }
