--- a/src/components/HomePage/HomePage.module.scss
+++ b/src/components/HomePage/HomePage.module.scss
@@ -1,11 +1,11 @@
 .page {
   min-height: 100vh;
   min-width: 100vw;
+  padding: 100px 84px;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 .documentViewer {
-  width: 80%;
-  height: 80%;
+  width: 1200px;
+  min-height: 940px;
 }
