--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -3,9 +3,9 @@
   border-radius: 20px;
   box-shadow: 0px 0px 7px rgba(49, 49, 49, 0.1);
   width: 100%;
-  height: 100%;
   padding: 64px 80px;
   display: flex;
+  flex: 1;
   flex-direction: column;
   gap: 43px;
 }
