--- a/src/components/ParagraphCard/ParagraphCard.module.scss
+++ b/src/components/ParagraphCard/ParagraphCard.module.scss
@@ -2,10 +2,9 @@
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0px 0px 4px rgba(192, 203, 202, 0.3);
-  width: 100%;
-  height: 100%;
   padding: 32px;
   padding-right: 108px;
+  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 43px;
