--- a/src/components/HomePage/HomePage.module.scss
+++ b/src/components/HomePage/HomePage.module.scss
@@ -3,9 +3,12 @@
   min-width: 100vw;
   padding: 100px 84px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 .documentViewer {
-  width: 1200px;
+  max-width: 1200px;
   min-height: 940px;
+  display: flex;
 }
