feature: add comment bar

--- a/src/components/HomePage/HomePage.module.scss
+++ b/src/components/HomePage/HomePage.module.scss
@@ -12,3 +12,9 @@
   min-height: 940px;
   display: flex;
 }
+
+.textAndBarContainer {
+  display: flex;
+  justify-content: space-between;
+  gap: 56px;
+}
