--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ h1 {
   color: #004f54;
 }
 p {
-  font-weight: 400px;
+  font-weight: 400;
   font-size: 16px;
   line-height: 43px;
   color: #696969;
