--- a/src/components/ParagraphCard/ParagraphCard.module.scss
+++ b/src/components/ParagraphCard/ParagraphCard.module.scss
@@ -3,9 +3,10 @@
   border-radius: 10px;
   box-shadow: 0px 0px 4px rgba(192, 203, 202, 0.3);
   padding: 32px;
-  padding-right: 108px;
   flex: 1;
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 43px;
+  padding-right: 92px;
 }
