--- a/src/components/HomePage/HomePage.module.scss
+++ b/src/components/HomePage/HomePage.module.scss
@@ -6,6 +6,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-image: url(../../assets/background-watermark.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: 100%;
 }
 .documentViewer {
   max-width: 1200px;
